[project]
name = "slack-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "anthropic>=0.64.0",
    "beautifulsoup4>=4.12.0",
    "fastmcp>=2.11.3",
    "googlesearch-python>=1.2.3",
    "mcp>=0.1.0",
    "openai>=1.101.0",
    "requests>=2.31.0",
]
